force-app/main/default/objects/Loan_Product__c/Loan_Product__c.object-meta.xml
<CustomObject>
    <description>Product catalog for all loan products offered. Drives eligibility rules, interest rates, and collateral requirements across the platform.</description>
    <label>Loan Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>