force-app/main/default/objects/Loan_Product__c/fields/Base_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Interest_Rate__c</fullName>
    <label>Base Interest Rate (%)</label>
    <required>true</required>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>