force-app/main/default/objects/Loan_Product__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <label>Maximum Loan Amount</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>