force-app/main/default/objects/Loan_Product__c/fields/Min_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Min_Tenure_Months__c</fullName>
    <label>Minimum Tenure (Months)</label>
    <required>true</required>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>