force-app/main/default/objects/Loan_Product__c/fields/Requires_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Requires_Collateral__c</fullName>
    <label>Requires Collateral</label>
    <defaultValue>false</defaultValue>
    <description>If true, property/collateral evaluation is mandatory before Branch Manager sanction. Set to true for Home Loan, Vehicle Loan, Loan Against Property, and secured Business Loan.</description>
    <type>Checkbox</type>
</CustomField>